# cpp-monorepo-cmake

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  main.cpp
my-project/: CMakeLists.txt  main.cpp
